init tagging form and tag handler, need to load people data to be able to search

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,5 +80,6 @@
     <script type="module" src="/static/js/ui-people-list.js"></script>
     <script type="module" src="/static/js/ui-person-details.js"></script>
     <script type="module" src="/static/js/utils.js"></script>
+    <script type="module" src="/static/js/tag_handler.js"></script>
 </body>
 </html>
