--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="/static/css/dashboard.css">
 </head>
 <body>
+    <script>
+        // Fallback in case the ID wasn't set via JavaScript
+        window.currentProjectId = window.currentProjectId || "{{ current_project_id }}";
+        console.log("Template-confirmed project ID:", window.currentProjectId);
+    </script>
+
     <div class="container-fluid">
         <div class="row">
             
@@ -80,7 +86,5 @@
     <script type="module" src="/static/js/ui-people-list.js"></script>
     <script type="module" src="/static/js/ui-person-details.js"></script>
     <script type="module" src="/static/js/utils.js"></script>
-    <script type="module" src="/static/js/tag-handler.js"></script>
-    <script src="/static/js/report-handler.js" type="module"></script>
 </body>
 </html>
