bring back misc some features

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -86,5 +86,7 @@
     <script type="module" src="/static/js/ui-people-list.js"></script>
     <script type="module" src="/static/js/ui-person-details.js"></script>
     <script type="module" src="/static/js/utils.js"></script>
+    <script type="module" src="/static/js/tag-handler.js"></script>
+    <script src="/static/js/report-handler.js" type="module"></script>
 </body>
 </html>
