--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,5 +88,48 @@
     <script type="module" src="/static/js/utils.js"></script>
     <script type="module" src="/static/js/tag-handler.js"></script>
     <script src="/static/js/report-handler.js" type="module"></script>
+
+    <!-- File Explorer Overlay -->
+    <link rel="stylesheet" href="/static/css/file_explorer.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script type="module" src="/static/js/file_explorer.js"></script>
+    <div id="file-explorer-overlay" class="file-explorer-overlay" style="display:none;">
+        <div class="file-explorer-modal">
+            <div class="file-explorer-header">
+                <h5 id="file-explorer-title">File Explorer</h5>
+                <button id="close-file-explorer" class="btn btn-sm btn-outline-secondary">&times;</button>
+            </div>
+            <div class="file-explorer-body">
+                <div class="file-explorer-sidebar" id="file-explorer-sidebar"></div>
+                <div class="file-explorer-main">
+                    <div id="file-explorer-toolbar">
+                        <input type="file" id="file-upload-input" multiple style="display:none;">
+                        <button id="upload-files-btn" class="btn btn-sm btn-outline-primary">Upload Files</button>
+                    </div>
+                    <table class="table table-sm" id="file-explorer-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>ID</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Files/folders will be rendered here -->
+                        </tbody>
+                    </table>
+                    <div id="markdown-viewer" style="display:none;">
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h6 id="markdown-filename"></h6>
+                            <button id="edit-markdown-btn" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <div id="markdown-content" class="markdown-body"></div>
+                        <textarea id="markdown-editor" style="display:none; width:100%; height:300px;"></textarea>
+                        <button id="save-markdown-btn" class="btn btn-primary btn-sm mt-2" style="display:none;">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
